# adtl

./: .gitignore  README.md  adtl.opam  dune-project  test.sh
src/: ast.ml  beautify.ml  ctx.ml  dune  infer.ml  lexer.mll  parser.mly  print.ml  version.ml
tests/: addcom.adtl  addcom2.adtl  arith.adtl  bool.adtl  induct.adtl  induct.out  noncumulative.adtl  poly.adtl  poly.out  test.adtl  test.out  type2def.adtl
